--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.3.0.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -82,3 +82,4 @@ war.ear.name=${war.name}
 war.name=Proyecto_PrismaCP_JAVA.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
+run.jvmargs=--enable-preview
